delete functionallity running and persisting to DB

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,10 +4,13 @@
   <title>Bookmark App</title>
 </head>
 <body>
-<ul>
-  <li><a href="/bookmarks">View all bookmarks</a></li>
-  <li><a href='/bookmarks/new'>Add A New Bookmark</a></li>
-</ul>
+
+<nav>
+  <ul>
+    <li><a href="/bookmarks">View all bookmarks</a></li>
+    <li><a href='/bookmarks/new'>Add A New Bookmark</a></li>
+  </ul>
+</nav>
 
 <%= yield %>
 
