--- a/views/show.erb
+++ b/views/show.erb
@@ -9,6 +9,8 @@
 
   <br>
 
+  <form action='/bookmarks/<%= bookmark['id'] %>/delete' method='post'><input type='submit' value='Delete This Bookmark'>
+  </form>
 
   <br>
   <hr>
