simple styling and nackground image added

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Bookmark App</title>
+  <meta charset='ytf-8'>
+    <title>Bookmark App</title>
+  <link rel='stylesheet' href='/style.css'/>
 </head>
 <body>
 
@@ -12,7 +14,9 @@
   </ul>
 </nav>
 
+<section id='yield'>
 <%= yield %>
+</section>
 
 </body>
 </html>
