search bar added functionality not in palce

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,6 +11,9 @@
   <ul>
     <li><a href="/bookmarks">View all bookmarks</a></li>
     <li><a href='/bookmarks/new'>Add A New Bookmark</a></li>
+    <form action='/bookmarks/search' method='get'>
+    <label for='search'>Search:</label>
+    <input type='text' name='search'>
   </ul>
 </nav>
 
