--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,5 @@
 html { 
-  background: url(img/MacScreenBackground.jpg) no-repeat center center fixed; 
+  background: url(img/MacScreenBackgroundLarger.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -9,23 +9,26 @@ html {
 nav {
   border-bottom: 2px solid black;
   background: white;
-  padding-top: 7px;
+  padding-top: 0px;
 }
 
 ul {
   display:block;
   text-align:center;
   padding-left: 0px;
+  padding-top: 5px;
 }
 
 ul li {
   display:inline;
   margin: 0 20px; 
+  padding-top: 5px;
 }
 
-a {
-  text-decoration: none;
-  font-family: Helvetica;
+form {
+  display:inline;
+  margin: 0 20px;
+  padding-top: 5px;  
 }
 
 form {
@@ -61,7 +64,32 @@ h3 {
   font-family:Helvetica;
 }
 
+h4 {
+  font-family:Helvetica;
+}
+
+h5 {
+  font-family:Helvetica;
+}
+
+a {
+  text-decoration: none;
+  font-family: Helvetica;
+  color:black;
+}
+
 #yield {
-  padding-top: 50px;
+  padding-top: 25px;
   text-align: center;
+  overflow-y: scroll; 
+  height:400px;">
+}
+
+textarea {
+  width: 350px;
+  height: 100px;
+}
+
+a:hover {
+  font-weight: bold;
 }
