--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,8 +12,9 @@
     <li><a href="/bookmarks">View all bookmarks</a></li>
     <li><a href='/bookmarks/new'>Add A New Bookmark</a></li>
     <form action='/bookmarks/search' method='get'>
-    <label for='search'>Search:</label>
-    <input type='text' name='search'>
+      <label for='name'>Search:</label>
+      <input type='text' name='name'>
+    </form>
   </ul>
 </nav>
 
