--- a/public/style.css
+++ b/public/style.css
@@ -22,6 +22,7 @@ ul {
   text-align:center;
   padding-left: 0px;
   padding-top: 5px;
+  margin-top:0;
 }
 
 ul li {
@@ -84,7 +85,7 @@ a {
 }
 
 #yield {
-  margin-top:35px;
+  margin-top:50px;
   padding-top: 0px;
   text-align: center;
   overflow-y: auto;
