--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,6 +7,7 @@
 </head>
 <body>
 
+
 <nav>
   <ul>
     <li><a href="/bookmarks">View all bookmarks</a></li>
@@ -18,9 +19,10 @@
   </ul>
 </nav>
 
+<div id="main">
 <section id='yield'>
 <%= yield %>
 </section>
-
+</div>
 </body>
 </html>
